remove side bar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,16 +45,16 @@
 
     #header #nav {
         position: absolute;
-        right: 60px;
-        top: 27px;
+        right: 30px;
+        top: 25px;
         font-size: 13px;
     }
     
     #header #nav a {
         text-decoration: none;
         display: inline-block;
-        color: #888;
-        padding: 10px 20px;
+        color: #666;
+        padding: 10px 15px;
         border-radius: 5px;
         margin-right: 0px;
         cursor: pointer;
@@ -63,6 +63,10 @@
         -ms-transition: color .3s;
         -moz-transition: color .3s;
         -webkit-transition: color .3s;
+    }
+
+    #header #nav a i {
+        margin-right: 6px;
     }
     
     #header #nav a.active,
