--- a/templates/layout.html
+++ b/templates/layout.html
@@ -138,19 +138,19 @@
 
     #nav_auth {
         position: absolute;
-        top: 24px;
-        font-size: 13px;
+        top: 22px;
+        font-size: 15px;
         right: 40px;
         display: block;
-        width: 120px;
+        width: 150px;
         margin: 0 auto;
         text-decoration: none;
         padding: 10px 16px;
         border-radius: 2px;
         border: 1px solid #f2f2f2;
-        color: #f2f2f2;
+        color: #252732;
         text-align: center;
-        background-color: #252732;
+        background-color: rgba(238, 245, 249, 0.8);
         -webkit-transition: color, background-color .6s;
         -ms-transition: color, background-color .6s;
         -moz-transition: color, background-color .6s;
