remove side bar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -148,9 +148,9 @@
         padding: 10px 16px;
         border-radius: 2px;
         border: 1px solid #f2f2f2;
-        color: #252732;
+        color: #f2f2f2;
         text-align: center;
-        background-color: rgba(238, 245, 249, 0.8);
+        background-color: #252732;
         -webkit-transition: color, background-color .6s;
         -ms-transition: color, background-color .6s;
         -moz-transition: color, background-color .6s;
