--- a/templates/invest.html
+++ b/templates/invest.html
@@ -13,9 +13,11 @@
 	border: 2px solid #535d63;
 	border-radius: 6px;
 	font-size: 30px;
-	width: 25%;
+	width: 22%;
 	height: 170px;
 	display: inline-block;
+    margin-right: 2%;
+    vertical-align: top;
 	-webkit-transition: color, background-color 1s;
     -ms-transition: color, background-color 1s;
     -moz-transition: color, background-color 1s;
@@ -26,6 +28,9 @@
     padding: 10px 16px;
     border: 2px solid #f2f2f2;
     position: relative;
+}
+#plot1 .cell:last-child {
+    margin-right: 0;
 }
 #plot1 .cell h5 {
     font-size: 16px;
