--- a/templates/invest.html
+++ b/templates/invest.html
@@ -51,7 +51,7 @@
 #plot1 .cell.inactive, #plot2 .cell.inactive {
     background-color: rgba(221, 107, 102, 0.9);
 }
-#plot1 .cell p, #plot2 .cell p {
+#plot1 .cell h6, #plot2 .cell h6 {
     width: 100%;
     position: absolute;
     bottom: 15px;
@@ -168,13 +168,13 @@
                         <div class="cell active" id="{{item['id']}}">
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
-                            <p>已启用</p>
+                            <h6>已启用</h6>
                         </div>
                     {% else %}
                         <div class="cell inactive" id="{{item['id']}}">
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
-                            <p>已停用</p>
+                            <h6>已停用</h6>
                             <span class="fa fa-fw fa-info"></span>
                         </div>
                     {% endif %}
@@ -189,13 +189,13 @@
                         <div class="cell active" id="{{item['id']}}">
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
-                            <p>已启用</p>
+                            <h6>已启用</h6>
                         </div>
                     {% else %}
                         <div class="cell inactive" id="{{item['id']}}">
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
-                            <p>已停用</p>
+                            <h6>已停用</h6>
                             <span class="fa fa-fw fa-info"></span>
                         </div>
                     {% endif %}
@@ -416,7 +416,7 @@ $(document).ready(function() {
             })
             .done(function(data) {
                 $obj.removeClass('active').addClass('inactive');
-                $obj.children('p').text('已停用');
+                $obj.children('h6').text('已停用');
             })
             .fail(function() {
             })
@@ -435,7 +435,7 @@ $(document).ready(function() {
             })
             .done(function(data) {
                 $obj.removeClass('inactive').addClass('active');
-                $obj.children('p').text('已启用');
+                $obj.children('h6').text('已启用');
             })
             .fail(function() {
             })
