--- a/templates/invest.html
+++ b/templates/invest.html
@@ -55,12 +55,13 @@
     width: 100%;
     position: absolute;
     bottom: 18px;
+    left: 0;
     margin-bottom: 0;
     font-size: 14px;
     color: #2c2f3c;
     font-weight: normal;
 }
-#plot1 .cell span.fa-info-circle, #plot2 .cell span.fa-info-circle {
+#plot1 .cell span.fa-info, #plot2 .cell span.fa-info {
     position: absolute;
     top: 8px;
     left: 8px;
@@ -71,7 +72,7 @@
 #plot1 .cell span.fa-times, #plot2 .cell span.fa-times {
     position: absolute;
     top: 8px;
-    left: 8px;
+    right: 8px;
     font-size: 15px;
     color: #fff;
     padding: 5px;
@@ -193,7 +194,7 @@
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
                             <h6>已停用</h6>
-                            <span class="fa fa-fw fa-info-circle"></span>
+                            <span class="fa fa-fw fa-info"></span>
                         </div>
                     {% endif %}
                 {% endfor %}
@@ -214,7 +215,7 @@
                             <h5>{{item['name']}}</h5>
                             <p>{{item['description']}}</p>
                             <h6>已停用</h6>
-                            <span class="fa fa-fw fa-info-circle"></span>
+                            <span class="fa fa-fw fa-info"></span>
                             <span class="fa fa-fw fa-times"></span>
                         </div>
                     {% endif %}
