--- a/templates/invest.html
+++ b/templates/invest.html
@@ -465,11 +465,11 @@ $(document).ready(function() {
     });
 
     $('.cell .fa-info').click(function(event) {
-        event.stopPropogation();
+        event.stopPropagation();
     });
 
     $('.cell .fa-times').click(function(event) {
-        event.stopPropogation();
+        event.stopPropagation();
         var $obj = $(this).parent('.cell');
         var strategyId = $obj.attr('id');
         $.ajax({
