--- a/templates/invest.html
+++ b/templates/invest.html
@@ -86,7 +86,7 @@
 }
 #add_info {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
